tests/outref/TERR029.ref

-- TERR029 : OCTO502 : Test that queries with expected parse error actually error out

INSERT INTO names VALUES 7;

Error with syntax near (line 1, column 26):

INSERT INTO names VALUES 7;
                         ^
syntax error, unexpected LITERAL, expecting LEFT_PAREN

[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names VALUES 7;
